--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,12 @@ img {
     opacity: 0;
   }
 }
+
+/* Riduci dimensioni bottoni su schermi piccoli (es. telefoni) */
+@media (max-width: 480px) {
+  button {
+    font-size: 1em;
+    padding: 10px 25px;
+    margin: 10px 10px;
+  }
+}
